pre\post process initial version

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+hw2/savedModel.pth
+*.txt
+hw2/.vector_cache/glove.6B.300d.txt.pt
+hw2/.vector_cache/glove.6B.zip
